# divera247

./: .env  .gitignore  README.md  api_v2_attachment.yaml  pyproject.toml  renovate.json5
.github/workflows/: build.yml  publish.yml
schemas/: README.md  api_v2_alarm.yaml  api_v2_auth.yaml  api_v2_dashboard.yaml  api_v2_event.yaml  api_v2_file.yaml  api_v2_message-channel.yaml  api_v2_message.yaml  api_v2_news.yaml  api_v2_operations.yaml  api_v2_password.yaml  api_v2_pull.yaml  api_v2_reporttype.yaml  api_v2_shift-plans.yaml  api_v2_statusgeber.yaml  api_v2_using-vehicle-crew.yaml  api_v2_using-vehicle-property.yaml  api_v2_using-vehicle.yaml
src/divera247/: __init__.py  auth.py  client.py  errors.py
src/divera247/endpoints/: __init__.py  alarm.py  attachment.py  auth.py  dashboard.py  event.py  message.py  message_channel.py  news.py  operations.py  password.py  pull.py  reporttype.py  shift_plans.py  statusgeber.py  using_vehicle.py  using_vehicle_crew.py  using_vehicle_property.py
src/divera247/models/: alarm.py  attachment.py  auth.py  event.py  file.py  message_channel.py  news.py  operations.py  password.py  pull.py  shift_plans.py  statusgeber.py  using_vehicle_property.py
src/divera247/websocket/: __init__.py  models.py  session.py
tests/: __init__.py  _helpers.py  conftest.py  test_auth.py  test_client.py  test_errors.py
tests/alarm/: delete_alarms_reset-responses_id_response.json  get_alarms_list_response.json  post_alarms_close_id_request.json  post_alarms_response.json  put_alarms_id_request.json  put_alarms_id_response.json  test_alarm.py
tests/attachments/: get_attachments_id_response.json  test_attachments.py
tests/auth/: get_jwt_response.json  post_login_request.json  post_login_response.json  test_auth.py
tests/dashboard/: get_dashboards_id_response.json  get_dashboards_response.json  put_dashboards_id_request.json  put_dashboards_id_response.json  test_dashboard.py
tests/event/: get_events_id_response.json  get_events_reach_id_response.json  get_events_response.json  post_events_confirm_id_request.json  post_events_request.json  put_events_id_response.json  test_event.py
tests/file/: get_file_open_id_response.json  test_file.py
tests/message/: get_messages_id_response.json  get_messages_response.json  post_messages_response.json  test_message.py
tests/message-channel/: get_message-channels_id_response.json  get_message-channels_message-sorting_id_response.json  post_message-channels_activity_id_request.json  post_message-channels_notification-settings_id_request.json  post_message-channels_notification-settings_id_response.json  put_message-channels_id_request.json  test_message_channel.py
tests/news/: get_news_id_response.json  get_news_response.json  post_news_confirm_id_request.json  put_news_id_request.json  put_news_id_response.json  test_news.py
tests/operations/: get_operations_alarms_response.json  get_operations_id_attachments_response.json  get_operations_response.json  get_operations_results_reached_response.json  get_operations_results_responses_response.json  get_operations_ric_foreign_id_response.json  post_operations_id_attachments_request.json  post_operations_realert_foreign_id_response.json  test_operations.py
tests/password/: get_password_validate_request.json  post_password_validate_response.json  test_password.py
tests/pull/: get_pull_all_response.json  get_pull_vehicle-status_response.json  test_pull.py
tests/reporttype/: delete_reports_id_attachment_response.json  delete_reports_id_response.json  delete_reporttypes_id_response.json  get_reporttypes_id_download_csv_response.json  get_reporttypes_id_download_json_response.json  get_reporttypes_id_download_xls_response.json  get_reporttypes_id_download_xlsx_response.json  get_reporttypes_id_reports_response.json  get_reporttypes_id_response.json  post_reports_id_status_request.json  post_reporttypes_id_copy_response.json  test_reporttype.py
tests/shift-plans/: get_shift-plans_response.json  test_shift_plans.py
tests/statusgeber/: post_statusgeber_set-status_request.json  test_statusgeber.py
tests/using-vehicle/: get_using-vehicles_get-status_id_response.json  post_using-vehicles_set-status-bulk_request.json  post_using-vehicles_set-status_id_request.json  test_using_vehicle.py
tests/using-vehicle-crew/: post_using-vehicle-crew_add_id_request.json  post_using-vehicle-crew_remove_id_request.json  test_using_vehicle_crew.py
tests/using-vehicle-property/: get_using-vehicle-property_get_id_response.json  test_using_vehicle_property.py
tests/websocket/: test_models.py  test_optional_extra.py  test_session.py  test_stream.py
(+75 files in other folders)
