[project]
name = "divera247"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leon", email = "y6q6ea9w@mail-proxy.org" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
    { include-group = "test" },
]


[tool.ruff]
lint.select = ["ALL"]
lint.extend-ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "ANN401",
    "C408",
    "C409",
    "D100",
    "D105",
    "D107",
    "D203",
    "D213",
    "EM101",
    "FIX002",
    "S101",
    "S311",
    "SIM102",
    "T201",
    "TD002",
    "TD003",
    "TRY003",
]

line-length = 120  # https://docs.astral.sh/ruff/settings/#line-length
src = ["src"]  # https://docs.astral.sh/ruff/settings/#src

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # https://docs.astral.sh/ruff/settings/#allow-star-arg-any
suppress-none-returning = true # https://docs.astral.sh/ruff/settings/#suppress-none-returning

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true  # https://docs.astral.sh/ruff/settings/#allow-dict-calls-with-keyword-arguments

[tool.ruff.lint.pycodestyle]
max-doc-length = 120 # https://docs.astral.sh/ruff/settings/#max-doc-length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
