[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "divera247"
version = "0.0.0"
description = "Async Python client for the DIVERA 24/7 REST API."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Leon", email = "y6q6ea9w@mail-proxy.org" }
]
keywords = [
    "divera",
    "divera247",
    "api-client",
    "rest",
    "async",
    "httpx",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10,<5",
    "httpx>=0.28.1",
    "pydantic>=2.12.2",
]

[project.optional-dependencies]
ws = [
    "httpx-ws>=0.9.0",
]

[project.urls]
Repository = "https://github.com/leon1995/divera247"
Issues = "https://github.com/leon1995/divera247/issues"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
    "trio>=0.33.0",
    "divera247[ws]",
]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.30",
    { include-group = "test" },
]


[tool.ruff]
lint.select = ["ALL"]
lint.extend-ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "ANN401",
    "C408",
    "C409",
    "COM812",
    "D100",
    "D105",
    "D107",
    "D203",
    "D213",
    "EM101",
    "FIX002",
    "S101",
    "S311",
    "SIM102",
    "T201",
    "TD002",
    "TD003",
    "TRY003",
]

line-length = 120  # https://docs.astral.sh/ruff/settings/#line-length
src = ["src"]  # https://docs.astral.sh/ruff/settings/#src

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # https://docs.astral.sh/ruff/settings/#allow-star-arg-any
suppress-none-returning = true # https://docs.astral.sh/ruff/settings/#suppress-none-returning

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true  # https://docs.astral.sh/ruff/settings/#allow-dict-calls-with-keyword-arguments

[tool.ruff.lint.pycodestyle]
max-doc-length = 120 # https://docs.astral.sh/ruff/settings/#max-doc-length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"src/divera247/client.py" = [
    "PLC0415", # lazy endpoint imports inside cached_property are deliberate (circular import avoidance)
]
"tests/**/*.py" = [
    "FBT001", # test helpers take bool positional args for pytest parametrisation ergonomics
    "FBT002",
    "FBT003",
    "PLR2004", # tests inline status codes / lengths for readability
    "PT012", # exercising async iterators inside pytest.raises blocks is unavoidable
    "SLF001", # tests intentionally reach into private helpers
]

[tool.pytest]
testpaths = ["tests"]
anyio_mode = "auto"
